--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "anchor test",
-    "test:unit": "anchor test --skip-deploy",
+    "test:unit": "mocha -r ts-node/register tests/unit/**/*.test.ts",
+    "test:integration": "anchor test tests/integration/**/*.test.ts",
+    "test:e2e": "anchor test tests/e2e/**/*.test.ts",
+    "test:security": "anchor test tests/security/**/*.test.ts",
+    "test:all": "anchor test tests/**/*.test.ts",
+    "test:coverage": "nyc --reporter=text --reporter=html anchor test",
     "build": "anchor build",
     "deploy": "anchor deploy",
     "deploy:devnet": "bash scripts/deploy.sh",
@@ -31,11 +36,13 @@
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
+    "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "chai": "^4.3.4",
     "eslint": "^8.0.0",
     "mocha": "^9.0.3",
+    "nyc": "^15.1.0",
     "prettier": "^3.0.0",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.0.0",
